--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "react": "^16.7.0",
+    "react-ace": "^6.3.2",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
     "socket.io": "^2.2.0",
