--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0"
+    "socket.io-client": "^2.2.0",
+    "validator": "^10.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
