--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "validator": "^10.11.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postinstall": "npm run build && node backend/server.js && node server.js"
+    "postinstall": "npm run build && node backend/server.js && npm start"
   },
   "proxy": "http://localhost:3001",
   "eslintConfig": {
