--- a/package.json
+++ b/package.json
@@ -21,16 +21,17 @@
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "serve": "^10.1.2",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "validator": "^10.11.0"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "node backend/server.js && serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postinstall": "npm run build && node backend/server.js && npm start"
+    "postinstall": "npm run build"
   },
   "proxy": "http://localhost:3001",
   "eslintConfig": {
