--- a/package.json
+++ b/package.json
@@ -4,15 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
-    "bcryptjs": "^2.4.3",
     "classnames": "^2.2.6",
-    "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "jsonwebtoken": "^8.4.0",
     "jwt-decode": "^2.2.0",
-    "mongoose": "^5.4.10",
-    "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0",
     "react": "^16.7.0",
     "react-ace": "^6.3.2",
     "react-dom": "^16.7.0",
@@ -21,19 +14,15 @@
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "serve": "^10.1.2",
-    "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "validator": "^10.11.0"
   },
   "scripts": {
-    "start": "node backend/server.js && serve -s build",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postinstall": "npm run build"
+    "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001",
   "eslintConfig": {
     "extends": "react-app"
   },
