Fix: Remove postinstall script and specify node engine
Heroku runs build automatically so no need of postinstall script.

--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postinstall": "npm run build"
+    "eject": "react-scripts eject"
+  },
+  "engines": {
+    "node": "11.x"
   },
   "eslintConfig": {
     "extends": "react-app"
