--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - restore_cache:
           name: Restore npm packages
           keys:
-            - npm-packages-{{ checksum "package.json" }}
+            - npm-packages-{{ checksum "package-lock.json" }}
       - run: 
           name: Install packages
           command: npm install
@@ -20,7 +20,7 @@ jobs:
           command: npm run build
       - save_cache:
           name: Save npm packages
-          key: npm-packages-{{ checksum "package.json" }}
+          key: npm-packages-{{ checksum "package-lock.json" }}
           paths:
             - ~/usr/local/lib/node_modules
   deploy:
